change some text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Devenez testeur de promo !</h1>
-        <p class="concept">Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo négociée pour vous.
+        <p class="concept">Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez de la meilleure promo avant tout le monde.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
