--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -22,7 +22,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Testez votre promo en impliquant vos clients dans sa conception. Vous découvrirez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.
+        <p class="concept">Découvrez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.
         </p>
         <div class="cta-links">
           <a href="#target">
@@ -45,7 +45,7 @@
         </div>
         <div class="test-type">
           <h5 class="test-title">A/B Test</h5>
-          <p>Vous avez déjà une idée précise, mais hésitez encore entre plusieurs prix pour votre promo. Nous présentons vos prix de façon alternative à chaque participant de le test pour déterminer le plus judicieux à adopter.</p>
+          <p>Vous avez déjà une idée précise, mais hésitez encore entre plusieurs prix pour votre promo. Nous présentons vos prix de façon alternative à chaque participant au test pour déterminer le plus judicieux à adopter.</p>
           <%= link_to root_path do %>
             <div class="btn more-infos">En savoir plus</div>
           <% end %>
