add pro model with devise

--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -35,7 +35,7 @@ h1 {
   margin: 20px 0;
 }
 
-#new_user, #registrate, #new_lead {
+#new_user, #registrate, #new_lead, #new_pro {
   width: 70%;
 }
 
@@ -79,7 +79,7 @@ h1 {
   }
 }
 
-#user_terms_of_service, #user_remember_me {
+#user_terms_of_service, #user_remember_me, #pro_remember_me {
   margin: 0 5px 0 0;
 }
 
@@ -135,7 +135,7 @@ h1 {
     padding: 20px;
   }
 
-  #new_user, #registrate, #new_lead {
+  #new_user, #registrate, #new_lead, #new_pro {
     width: 100%;
   }
 
