--- a/app/assets/stylesheets/devise/sign-in.scss
+++ b/app/assets/stylesheets/devise/sign-in.scss
@@ -3,7 +3,7 @@
   margin: 30px 0;
 }
 
-#forgot-password, .user_remember_me {
+#forgot-password, .user_remember_me, .pro_remember_me {
   position: absolute;
   bottom: -3px;
 }
