pro able to change password

--- a/app/views/pages/_right-links-testor.html.erb
+++ b/app/views/pages/_right-links-testor.html.erb
@@ -5,7 +5,7 @@
 
   <!-- Overlay content -->
   <div class="overlay-content">
-    <%= link_to partners_path do %>
+    <%= link_to pros_path do %>
       <i class="fas fa-store"></i> <%= t(".pro", default: "Espace pro") %>
     <% end %>
     <%= link_to contact_path do %>
