--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </div>
       <div class="right-links">
-        <%= link_to "Espace Pro", partners_path %>
+        <%= link_to "Espace Pro", pros_path %>
         <%= link_to "Contact", contact_path %>
         <%= link_to "Mon Compte", new_user_session_path %>
       </div>
