--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
         <% end %>
       </div>
       <div class="right-links">
+        <%= link_to "Espace Testeurs", home_path, class:"selected" %>
         <%= link_to "Espace Pro", pros_path %>
-        <%= link_to "Contact", contact_path %>
         <%= link_to "Mon Compte", new_user_session_path %>
       </div>
       <div class="right-links-menu">
