--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="right-links">
         <%= link_to "Espace Testeurs", home_path %>
-        <%= link_to "Contact", contact_path %>
+        <%= link_to "Espace Pros", pros_path, class:"selected" %>
         <%= link_to " Mon Compte pro", new_pro_session_path %>
       </div>
       <div class="right-links-menu">
@@ -22,7 +22,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Découvrez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.
+        <p class="concept">L'outil indispensable pour tester et lancer des promos qui atteignent leurs objectifs de façon efficiente.
         </p>
         <div class="cta-links">
           <%= link_to "Plus d'infos", more_infos_path, class:"btn-white cta-link go-to"%>
@@ -34,6 +34,7 @@
 
   <div id=target>
     <h2 class="steps-title">Atteindre votre objectif en 4 étapes</h2>
+    <p class="what">Découvrez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.</p>
     <div class="step-pro reverse">
       <div class="text">
         <h3><i class="fas fa-flask"></i> Test</h3>
@@ -108,7 +109,7 @@
           <p>Déclinez les propositions des acheteurs qui sont inférieures à celui-ci</p>
         </div>
         <div class="box-case">
-          <p>Lancez votre promo à plus grande échelle: vous avez l'assurance de proposer le prix optimal</p>
+          <p>Avec ou sans nous, lancez votre promo à plus grande échelle: vous avez l'assurance de proposer le prix optimal pour atteindre vos objectifs de la façon la plus efficiente</p>
         </div>
       </div>
     </div>
