--- a/app/views/pros/_navbar.html.erb
+++ b/app/views/pros/_navbar.html.erb
@@ -12,7 +12,7 @@
           <% if pro_signed_in? %>
             <li>
               <%= link_to pro_path(current_pro) do %>
-                <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Mon compte") %>
+                <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Espace pro") %>
               <% end %>
             </li>
           <% end %>
