--- a/app/views/pros/registrations/new.html.erb
+++ b/app/views/pros/registrations/new.html.erb
@@ -1,8 +1,10 @@
 <div class="page-container">
   <div class="form-and-image">
     <div class="registration-form">
-      <div class="logo-beta logo-form"><%= image_tag "logo.png", id: "logo", alt: "logo pickalgo color" %><br>©Beta 2018
-      </div>
+      <%= link_to pros_path do %>
+        <div class="logo-beta"><%= image_tag "logo.png", id: "logo", alt: "logo pickalgo color" %><br>©Beta 2018
+        </div>
+      <% end %>
       <div class="form-elements">
         <h1>Créer un compte pro</h1>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
