--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="right-links">
         <%= link_to "Espace Testeurs", home_path, class:"selected" %>
-        <%= link_to "Espace Pro", pros_path %>
+        <%= link_to "Espace Pros", pros_path %>
         <%= link_to "Mon Compte", new_user_session_path %>
       </div>
       <div class="right-links-menu">
@@ -42,7 +42,7 @@
         <%= image_tag "choose.svg", class: "action-image", alt: "icon image choose svg" %>
         <div class="quote">Déterminez...</div>
         <div class="step-text">
-          le prix maximal vous seriez prêt à payer pour ce produit
+          le prix promotionnel maximal vous seriez prêt à payer pour ce produit
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
@@ -70,7 +70,7 @@
           <div class="quote-orange">C'est gagné :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
-              <li>Vous proposez une promo à 180 €</li>
+              <li>Votre prix promo max est de 180 €</li>
               <li>La promo négociée est à 140 €</li>
               <li>Vous obtenez le produit pour 140 €</li>
             </ul>
@@ -81,7 +81,7 @@
           <div class="quote-orange">Rien de perdu :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
-              <li>Vous proposez une promo à 135 €</li>
+              <li>Votre prix promo max est de 135 €</li>
               <li>La promo négociée est à 140 €</li>
               <li>Vous ne profitez pas de la promo</li>
             </ul>
