--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-container {
-  border-bottom: 1px solid #d3d3d3;
+  border-bottom: 1px solid rgba(0,0,0,.0625);
   background-color: #FFF;
 }
 
