--- a/app/assets/stylesheets/pages/_pros.scss
+++ b/app/assets/stylesheets/pages/_pros.scss
@@ -3,9 +3,9 @@
 }
 
 .what {
-  width: 30%;
+  width: 40%;
   margin: 30px auto;
-  text-align: center;
+  text-align: justify;
   font-size: 17px;
   color: #525f7f;
 }
@@ -23,11 +23,6 @@
     flex: 0 0 55%;
   }
 
-  .sub-title {
-    font-size: 23px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
 
   .step-text {
     font-size: 20px;
@@ -36,9 +31,9 @@
 
   h3 {
 
-    font-size: 30px;
+    font-size: 27px;
     color: $blue;
-    margin: 0 0 20px 0;
+    margin: 0 0 30px 0;
     text-align: left;
     font-weight: normal;
   }
@@ -152,6 +147,7 @@
 
   .steps-title {
     margin-bottom: 50px;
+    padding: 0 10px;
   }
 
   .reverse {
@@ -182,6 +178,10 @@
     margin: 0 auto;
   }
 
+  .what {
+    width: 60%;
+  }
+
 }
 
 @media screen and (max-width: 480px) {
@@ -207,17 +207,14 @@
         padding: 0;
       }
 
-      h3 {
-        font-size: 30px;
-      }
-
-      .sub-title {
-        font-size: 20px;
-      }
 
       .step-text {
         font-size: 17px;
       }
+    }
+
+    .what {
+      width: 85%;
     }
 }
 
