--- a/app/views/pros/_dashboard-navigation.html.erb
+++ b/app/views/pros/_dashboard-navigation.html.erb
@@ -2,9 +2,9 @@
   <%= link_to pro_path(@pro) do %>
     <div class="link"><i class="fas fa-tachometer-alt"></i> Dashboard</div>
   <% end %>
-  <div class="link">Produits</div>
-  <div class="link">Campagnes</div>
-  <div class="link">Nous contacter</div>
+  <div class="link"><i class="fas fa-cog"></i> Configuration</div>
+  <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
+  <div class="link"><i class="fas fa-envelope"></i> Nous contacter</div>
   <%= link_to destroy_pro_session_path, method: :delete do %>
     <div class="link"><i class="fas fa-power-off"></i> Déconnexion</div>
   <% end %>
