add overlay dashboard

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,6 +17,16 @@
   margin-bottom: 0px;
 }
 
+.navbar-pro {
+  padding: 0 35px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 70px;
+  margin-bottom: 0px;
+}
+
 
 /* User Avatar */
 
