--- a/app/assets/stylesheets/pros/_show.scss
+++ b/app/assets/stylesheets/pros/_show.scss
@@ -109,3 +109,25 @@
   }
 
 }
+
+@media all and (max-width: 1280px) {
+
+}
+
+@media all and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+  .navigation-menu-container {
+    display: none;
+  }
+
+  .general-infos {
+    flex: 0 0 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+
+}
