--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -1,5 +1,6 @@
 
 <%= render 'pros/navbar' %>
+<%= render 'right-links-dashboard' %>
 <div class="dashboard-container">
   <%= render 'dashboard-navigation' %>
   <div class="general-infos">
