responsive dashboard working

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -85,7 +85,7 @@
 
 @media screen and (max-width: 480px) {
   .btn-white, .btn-blue, .btn-orange {
-    padding: 9px;
+    padding: 5px 10px;
     text-transform: capitalize;
   }
 }
