--- a/app/views/pros/_general-infos.html.erb
+++ b/app/views/pros/_general-infos.html.erb
@@ -51,7 +51,7 @@
   </div>
   <div class="column">
     <div class="general-form">
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= simple_form_for(@pro, :url => { :action => "update_password" } ) do |f| %>
         <h5>Modifier le mot de passe</h5>
         <div class="form-inputs">
           <div class="input-and-icon">
