save password update working

--- a/app/assets/stylesheets/pros/_show.scss
+++ b/app/assets/stylesheets/pros/_show.scss
@@ -20,6 +20,11 @@
     }
   }
 
+  .selected-category {
+    background-color: #F1F3F4;
+    cursor: pointer;
+  }
+
   .fas {
     margin-right: 15px;
     font-size: 19px;
