--- a/app/assets/stylesheets/pros/_show.scss
+++ b/app/assets/stylesheets/pros/_show.scss
@@ -8,7 +8,7 @@
   background-color: #FFF;
   border-right: 1px solid rgba(0,0,0,.0625);
   flex: 0 0 20%;
-  padding: 20px 0;
+  padding: 30px 0;
 
   .link {
     font-size: 15px;
@@ -56,64 +56,54 @@
 }
 
 .general-infos {
-  padding: 20px;
+  padding: 30px;
   flex: 0 0 80%;
+
   h5 {
     margin-top: 0;
     margin-bottom: 30px;
     color: #313435;
+    font-size: 20px;
   }
+
 }
 
-.pro-forms {
+.dashboard-top {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
-.compagny-recap {
-  flex: 0 0 100%;
+.info-bloc {
+  background-color: #FFF;
+  border: 1px solid rgba(0, 0, 0, 0.0625);
+  padding: 20px;
+}
+
+.brand {
+  flex: 0 0 40%;
+}
+
+.social {
+  flex: 0 0 59%;
+}
+
+.text-and-form {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: stretch;
-  margin-bottom: 30px;
 }
 
-.brand-name, .created-at {
-  flex: 0 0 24%;
-  background-color: #FFF;
-  border: 1px solid rgba(0,0,0,.0625);
-  padding: 20px;
+.text-part {
+  flex: 0 0 40%;
+  padding: 30px 20px;
 }
 
-.social-links {
-  flex: 0 0 49%;
-  background-color: #FFF;
-  border: 1px solid rgba(0,0,0,.0625);
-  padding: 20px;
+.form-part {
+  flex: 0 0 59%;
 }
 
-.column {
-  flex: 0 0 49%;
-}
 
-.general-form {
-  background-color: #FFF;
-  border: 1px solid rgba(0,0,0,.0625);
-  padding: 20px;
-  margin-bottom: 15px;
-
-  #new_user {
-    width: 100%;
-  }
-
-  #save-cta, #password-cta {
-    margin: 0 0 0 auto;
-  }
-
-}
 
 @media all and (max-width: 1280px) {
 
@@ -135,8 +125,5 @@
 
 @media screen and (max-width: 480px) {
 
-  .column {
-    flex: 0 0 100%;
-  }
 
 }
