--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   border: none;
   align-items: center;
-  padding: 7px 15px;
+  padding: 7px 15px !important;
   text-decoration: none;
   border-radius: 10px;
   color: #FFF;
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 7px 15px;
+  padding: 7px 15px !important;
   text-decoration: none;
   border-radius: 10px;
   cursor: pointer;
@@ -58,7 +58,7 @@
   .btn-white {
     border-radius: 10px;
     cursor: pointer;
-    padding: 7px 15px;
+    padding: 7px 15px !important;
     color: #243763;
     background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e4e4e9));
     background: linear-gradient(#fff, #e4e4e9);
