--- a/app/views/pros/_right-links-dashboard.html.erb
+++ b/app/views/pros/_right-links-dashboard.html.erb
@@ -6,10 +6,10 @@
   <!-- Overlay content -->
   <div class="overlay-content">
     <%= link_to pro_path(@pro) do %>
-      <div class="link"><i class="fas fa-tachometer-alt"></i> Dashboard</div>
+      <div class="link"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
     <% end %>
     <%= link_to edit_pro_path(@pro) do %>
-      <div class="link"><i class="fas fa-cog"></i> Configuration</div>
+      <div class="link"><i class="fas fa-lock"></i> Sécurité</div>
     <% end %>
     <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
     <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
