change user dashboard to match pro

--- a/app/assets/stylesheets/pros/_show.scss
+++ b/app/assets/stylesheets/pros/_show.scss
@@ -70,6 +70,10 @@
     margin: 0 0 0 auto;
   }
 
+  #new_user {
+    width: 100%;
+  }
+
 }
 
 
@@ -142,7 +146,7 @@
 
   .text-part, .form-part {
     flex: 0 0 100%;
-    padding: 10px 20px;
+    padding: 15px 20px;
   }
 
 }
