--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,136 +1,9 @@
-.content-container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 60px 0;
-}
-
-
-.settings-container {
+.d-flex {
   display: flex;
-  align-items: start;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.setting-menu {
-  background-color: #FFF;
-  border-top: 1px solid #d3d3d3;
-  border-left: 1px solid #d3d3d3;
-  border-bottom: 1px solid #d3d3d3;
-  flex: 0 0 20%;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-
-.menu-link {
-  padding: 16px 16px 16px 20px;
-  font-size: 16px;
-  &:first-child {
-    border-bottom: 1px solid #d3d3d3;
-  }
-  a {
-    color: #262626;
-    &:hover {
-      font-weight: bold;
-    }
-  }
-}
-
-.forms {
-  border: 1px solid #d3d3d3;
-  flex: 0 0 80%;
-  padding: 40px;
-  background-color: #FFF;
-}
-
-#civil, #security {
-  &:focus {
-    outline: none;
-  }
-}
-
-.edit-user-form {
-  margin-bottom: 80px;
-  border: 1px solid $blue;
-  padding: 30px;
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  .form-inputs {
-    width: 50%;
-  }
-
-  #new_user {
-    width: 100%;
-  }
-
-  h2 {
-    margin: 0 0 20px 0;
-    font-size: 25px;
-    color: #2e1e72;
-  }
-
-  .btn-blue {
-    margin: 20px 0 0 auto;
-    padding: 7px 20px;
-    text-transform: uppercase;
-  }
-}
-
-@media all and (max-width: 1280px) {
-
-  .content-container {
-    padding: 35px 0;
-  }
-
-  .settings-container {
-    padding: 10px 20px;
-  }
-}
-
-
-@media all and (max-width: 980px) {
-
-}
-
-@media screen and (max-width: 768px) {
-  .content-container {
-    padding: 20px;
-  }
-
-  .setting-menu {
-    display: none;
-  }
-
-  .forms {
-    flex: 0 0 100%;
-  }
-
-  .edit-user-form {
-    .form-inputs {
-      width: 100%;
-    }
-  }
-
-}
-
-@media screen and (max-width: 480px) {
-
-  .content-container {
-    padding: 0;
-  }
-  .settings-container {
-    padding: 10px 0;
-  }
-
-  .forms {
-    padding: 15px;
-  }
-
-  .edit-user-form {
-    padding: 15px;
-    .form-inputs {
-      width: 100%;
-    }
-  }
-
+#user_date_of_birth_3i, #user_date_of_birth_2i, #user_date_of_birth_1i {
+  flex: 0 0 30%;
 }
