--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,8 @@
               <span class="icon fas fa-phone"></span>
             </div>
             <div class="input-and-icon">
-              <%= f.input :date_of_birth, label:"Anniversaire", as: :date,  start_year: Date.today.year - 16,
+              <label for="date_of_birth"><i class="fas fa-calendar-alt"></i> Date d'anniversaire</label>
+              <%= f.input :date_of_birth, label: false, as: :date,  start_year: Date.today.year - 16,
                                                     end_year: 1900,
                                                     order: [:day, :month, :year], :prompt => { :month => 'Mois', :year => 'Année', :day => 'Jour' }, use_month_numbers: true  %>
 
