correct product display

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,11 +5,12 @@
   <%= render 'pros/dashboard-navigation' %>
   <div class="general-infos">
     <%= link_to "Ajouter un produit", new_product_path %>
-
-    <%= @products.each do |product| %>
-      <h1><%= product.title %></h1>
-      <p><%= product.price %></p>
-      <%= cl_image_tag("#{product.photos.first.path}", :width=>110, :height=>110, :crop=>"fill", class: "product-image")%>
+    <% if @products.present? %>
+      <% @products.each do |product| %>
+        <h1><%= product.title %></h1>
+        <p><%= product.price %></p>
+        <%= cl_image_tag("#{product.photos.first.path}", :width=>110, :height=>110, :crop=>"fill", class: "product-image")%>
+      <% end %>
     <% end %>
   </div>
 </div>
